commit 7b11b5d0da29447df026002af3ae5283510fdae9
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-04-29 13:03:00 +0200

    Additional runoff data used by Agroscope

commit 67cd9e04caaf18a40231262c9033fb24e8bb2a66
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-04-26 13:45:44 +0200

    Formatting improvement for the online docs

commit 45f540ef19fd2a2a80e3f3f72950933ed6396f0c
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-04-26 13:33:27 +0200

    Another take on completing the drift data
    
    The R script I used yesterday got lost because I used the .Rd file
    that got overwritten by roxygen later.

commit 451b332c8888bac8279340b086abb3b714ac3ae1
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-04-25 11:50:35 +0200

    Add more drift data, especially 3 m field crop data
    
    To support Agroscope in doing lots of PEC calculations for Switzerland

commit 3bb842b93107dd6207610de1fe5b44be66779e4d
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-04-25 10:25:56 +0200

    Remove leftover docs from earlier version
    
    Docs now live in docs/

commit 77f63efa62b6530fbe2accdacc866e34626fe4e3
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-02-21 16:01:38 +0100

    Update docs

commit 5086e2b87eaec90a02b4744d1321c6949d0b8982
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-02-21 15:59:22 +0100

    Use codecov

commit e21ec96873bf60072414369bc96e4c076a450235
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-02-19 17:13:55 +0100

    Add grImport to Suggests:
    
    Because chent which in turn suggests grImport is loaded from github
    which obviously does not pull grImport

commit 4e99ae029638a3720eba97b28bd7de3129a727ce
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-02-19 15:22:26 +0100

    Update README.html

commit 31eca93dadf58d47b3f3dd7aa485f89023090440
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2019-02-19 14:54:26 +0100
