@@ -7,5 +7,5 @@ Removed empty directory ‘pfm/inst/testdata/SwashProjects/Project_1/MACRO’
 Removed empty directory ‘pfm/inst/testdata/SwashProjects/Project_1’
 Removed empty directory ‘pfm/inst/testdata/SwashProjects’
 * looking to see if a ‘data/datalist’ file should be added
-* building ‘pfm_0.5.5.tar.gz’
+* building ‘pfm_0.5.6.tar.gz’
 
